[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sp_weapon_1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Weapon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 3 )

[node name="Weapon" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="MeasurementPosition" type="Position2D" parent="."]
position = Vector2( 33, 0 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
